fieldset and text align fixes

--- a/main.css
+++ b/main.css
@@ -6,8 +6,10 @@
 }
 
 fieldset {
-  margin: 0;
+  border: 0;
   padding: 0;
+  margin: 0;
+  min-width: 0;
 }
 
 body, button {
@@ -47,14 +49,6 @@ legend {
   min-width: 600px;
 }
 
-ul {
-  padding-left: 175px;
-}
-
-li {
-  text-align: left;
-}
-
 button {
   padding: 7px 25px;
   border: 2px solid #8a2be2;
@@ -88,6 +82,9 @@ button:disabled {
 
 li {
   list-style-type: none;  
+  -webkit-padding-start: 0;
+  position: relative;
+  text-align: center;
 }
 
 i {
@@ -95,6 +92,8 @@ i {
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
   opacity: 0;
+  position: absolute;
+  top: 4px;
 }
 
 .opaque {
